<resources>
    <string name="app_name">NewMaker</string>
    <string name="images_string">Images</string>
    <string name="ucrop_scale">Scale</string>
    <string name="ucrop_brightness">Brightness</string>
    <string name="ucrop_contrast">Contrast</string>
    <string name="ucrop_saturation">Saturation</string>
    <string name="ucrop_sharpness">Sharpness</string>


    <string name="library_name">Photo Editor</string>
    <string name="no_images">No image found</string>
    <string name="images">%d images</string>
    <string name="done">DONE</string>
    <string name="apply">APPLY</string>

    <string name="stickers">Stickers</string>
    <string name="filter">Filters</string>
    <string name="crop">Crop</string>
    <string name="rotate">Rotate</string>
    <string name="text">Text</string>
    <string name="edit">Edit</string>
    <string name="brightness">Brightness</string>
    <string name="saturation">Saturation</string>

    <string name="materialcolorpicker__errHex">Hex Code Format incorrect</string>
    <string name="materialcolorpicker__btnSelectColor">Select</string>
    <string name="saving_image">Saving…</string>
    <string name="input_hint">Input Text …</string>

    <string name="not_selected">Please choose an image for edit</string>
    <string name="auto_newline">AutoNewline</string>
    <string name="save_error">Save error!</string>
    <string name="load_error">Failed to load the image!</string>
    <string name="loading">Loading…</string>
    <string name="pick_a_color">Pick a color</string>

    <string name="free_size">FREE</string>
    <string name="fit_image">ORIGINAL</string>
    <string name="square">SQUARE</string>
    <string name="ratio3_4">3:4</string>
    <string name="ratio4_3">4:3</string>
    <string name="ratio9_16">9:16</string>
    <string name="ratio16_9">16:9</string>

    <string-array name="filters">
        <item>Origin</item>
        <item>Soft</item>
        <item>Black</item>
        <item>Classic</item>
        <item>Gorgeous</item>
        <item>Retro</item>
        <item>Grace</item>
        <item>Film</item>
        <item>Memory</item>
        <item>Yogurt</item>
        <item>Fleeting</item>
        <item>Shine</item>
    </string-array>

    <string-array translatable="false" name="filter_drawable_list">
        <item>filter_1</item>
        <item>filter_2</item>
        <item>filter_3</item>
        <item>filter_4</item>
        <item>filter_5</item>
        <item>filter_6</item>
        <item>filter_7</item>
        <item>filter_8</item>
        <item>filter_9</item>
        <item>filter_10</item>
        <item>filter_11</item>
        <item>filter_12</item>
    </string-array>

    <string-array translatable="false" name="types">
        <item>type1</item>
        <item>type2</item>
        <item>type3</item>
        <item>type4</item>
        <item>type5</item>
        <item>type6</item>
    </string-array>

    <string-array name="type_names">
        <item>Type 1</item>
        <item>Type 2</item>
        <item>Type 3</item>
        <item>Type 4</item>
        <item>Type 5</item>
        <item>Type 6</item>
    </string-array>

    <integer-array translatable="false" name="type_count">
        <item>5</item>
        <item>5</item>
        <item>5</item>
        <item>5</item>
        <item>3</item>
        <item>5</item>
    </integer-array>

    <string name="more">More</string>
    <string name="exit_without_save">The edited image is not saved. Do you want to exit? </string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>

    <string name="beauty">Beauty</string>
    <string name="smooth">Smoothness</string>
    <string name="white_skin">Skin Tone</string>

    <item type="id" translatable="false" name="TAG_STICKERS_PATH" />
    <item type="id" translatable="false" name="TAG_STICKERS_COUNT" />
</resources>
