<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.example.sahityakumarsuman.newmaker.widget.GestureCropImageView
        android:id="@+id/ucrop"
        android:layout_width="288dp"
        android:layout_height="293dp"
        android:layout_above="@+id/wrapper_reset_rotate"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="47dp"
        android:layout_marginLeft="47dp"
        android:layout_marginTop="8dp" />


    <FrameLayout
        android:id="@+id/wrapper_controls"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ucrop_height_wrapper_controls"
        android:layout_below="@+id/ucrop">

        <include layout="@layout/ucrop_layout_brightness_wheel"></include>

        <include layout="@layout/ucrop_layout_contrast_wheel"></include>

        <include layout="@layout/ucrop_layout_saturation_wheel"></include>

        <include layout="@layout/ucrop_layout_scale_wheel"></include>

        <include layout="@layout/ucrop_layout_sharpness_wheel"></include>
    </FrameLayout>


    <com.example.sahityakumarsuman.newmaker.widget.ControlLayout
        android:id="@+id/wrapper_states"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ucrop_height_wrapper_states"
        android:layout_below="@+id/wrapper_controls"
        android:background="@color/ucrop_color_widget_background"
        android:scrollbarThumbHorizontal="@drawable/ucrop_scrollbar_thumb_horizontal"
        android:scrollbars="horizontal">
        <LinearLayout
            android:id="@+id/state_scale"
            style="@style/ucrop_WrapperIconState">

            <ImageView
                android:id="@+id/image_view_state_scale"
                style="@style/ucrop_ImageViewWidgetIcon"
                app:srcCompat="@drawable/ucrop_scale" />

            <TextView
                android:id="@+id/text_view_scale"
                style="@style/ucrop_TextViewWidget"
                android:text="@string/ucrop_scale" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/state_brightness"
            style="@style/ucrop_WrapperIconState">

            <ImageView
                android:id="@+id/image_view_state_brightness"
                style="@style/ucrop_ImageViewWidgetIcon"
                app:srcCompat="@drawable/ucrop_brightness" />

            <TextView
                android:id="@+id/text_view_brightness"
                style="@style/ucrop_TextViewWidget"
                android:text="@string/ucrop_brightness" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/state_contrast"
            style="@style/ucrop_WrapperIconState">

            <ImageView
                android:id="@+id/image_view_state_contrast"
                style="@style/ucrop_ImageViewWidgetIcon"
                app:srcCompat="@drawable/ucrop_contrast" />

            <TextView
                android:id="@+id/text_view_contrast"
                style="@style/ucrop_TextViewWidget"
                android:text="@string/ucrop_contrast" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/state_saturation"
            style="@style/ucrop_WrapperIconState">

            <ImageView
                android:id="@+id/image_view_state_saturation"
                style="@style/ucrop_ImageViewWidgetIcon"
                app:srcCompat="@drawable/ucrop_saturation" />

            <TextView
                android:id="@+id/text_view_saturation"
                style="@style/ucrop_TextViewWidget"
                android:text="@string/ucrop_saturation" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/state_sharpness"
            style="@style/ucrop_WrapperIconState">

            <ImageView
                android:id="@+id/image_view_state_sharpness"
                style="@style/ucrop_ImageViewWidgetIcon"
                app:srcCompat="@drawable/ucrop_sharpness" />

            <TextView
                android:id="@+id/text_view_sharpness"
                style="@style/ucrop_TextViewWidget"
                android:text="@string/ucrop_sharpness" />
        </LinearLayout>
    </com.example.sahityakumarsuman.newmaker.widget.ControlLayout>

</RelativeLayout>